--- a/index.html
+++ b/index.html
@@ -226,6 +226,15 @@
                       status: 'ok',
                     },
                   ]
+                : new URLSearchParams(location.search).get('demo')
+                ? [
+                    {
+                      key: '1586343164047:2',
+                      name: '20200408T080128555Z.png',
+                      id: '1jcJPgvW-fd3itKzhgb1CqA7G86w_cniR',
+                      status: 'ok',
+                    },
+                  ]
                 : [],
             },
             watch: {
