Change URL to open

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 },
                 driveUrl: {
                   name: 'Drive URL',
-                  format: 'https://drive.google.com/file/d/$id/view',
+                  format: 'https://drive.google.com/open?id=$id',
                   description: 'Web page URL to the file in Google Drive.',
                 },
                 markdown: {
