--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="img.spacet.me" />
     <meta
       name="twitter:description"
-      content="Private image hosting service powered by Google Drive. Upload image to Google Drive and get a direct link instantly."
+      content="A personal image hosting service powered by Google Drive. Upload image to Google Drive and get a direct link instantly."
     />
     <meta
       property="og:image"
@@ -44,7 +44,7 @@
     <meta property="og:url" content="https://img.spacet.me/" />
     <meta
       property="og:description"
-      content="Private image hosting service powered by Google Drive. Upload image to Google Drive and get a direct link instantly."
+      content="A personal image hosting service powered by Google Drive. Upload image to Google Drive and get a direct link instantly."
     />
 
     <link
